[workspace]
members = [
    "main-crate",
    "task-spawner",
]
resolver = "3"

[workspace.dependencies]
main-crate = { path = "./main-crate" }
task-spawner = { path = "./task-spawner" }

[workspace.dependencies.tokio]
version = "1.44.2"
features = [
    "rt-multi-thread",
    "macros",
    "tracing",
]
